--- a/ios/.xcode.env
+++ b/ios/.xcode.env
@@ -8,4 +8,6 @@
 # Customize the NODE_BINARY variable here.
 # For example, to use nvm with brew, add the following line
 # . "$(brew --prefix nvm)/nvm.sh" --no-use
-export NODE_BINARY=$(command -v node)
+export NODE_BINARY=/Users/sophieoliver/.nvm/versions/node/v20.12.2/bin/node
+
+
