--- a/ios/BugApp.xcodeproj/xcshareddata/xcschemes/BugApp.xcscheme
+++ b/ios/BugApp.xcodeproj/xcshareddata/xcschemes/BugApp.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1210"
+   LastUpgradeVersion = "9999"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "MyProject.app"
-               BlueprintName = "MyProject"
-               ReferencedContainer = "container:MyProject.xcodeproj">
+               BuildableName = "BugApp.app"
+               BlueprintName = "BugApp"
+               ReferencedContainer = "container:BugApp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "MyProjectTests.xctest"
-               BlueprintName = "MyProjectTests"
-               ReferencedContainer = "container:MyProject.xcodeproj">
+               BuildableName = "BugAppTests.xctest"
+               BlueprintName = "BugAppTests"
+               ReferencedContainer = "container:BugApp.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MyProject.app"
-            BlueprintName = "MyProject"
-            ReferencedContainer = "container:MyProject.xcodeproj">
+            BuildableName = "BugApp.app"
+            BlueprintName = "BugApp"
+            ReferencedContainer = "container:BugApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "MyProject.app"
-            BlueprintName = "MyProject"
-            ReferencedContainer = "container:MyProject.xcodeproj">
+            BuildableName = "BugApp.app"
+            BlueprintName = "BugApp"
+            ReferencedContainer = "container:BugApp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
