--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.74.0",
     "react-native-codegen": "^0.70.7",
+    "react-native-nfc-manager": "^3.14.14",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1"
   },
